# jupyter_notebook

./: .gitignore  README.md  pyproject.toml
coding_the_matrix/ch10/: orthogonal.ipynb
coding_the_matrix/ch6/: exchange.ipynb  is_superfluous.ipynb  source.py  subset_basis.ipynb  superset_basis.ipynb
coding_the_matrix/ch7/: direct_sum_decompose.ipynb  find_matrix_inverse.ipynb  find_triangular_matrix_invese.ipynb  is_invertible.ipynb  morph.ipynb  my_is_independent_my_rank.ipynb  source.py
coding_the_matrix/ch8/: Lab_Primes.ipynb  Lab_Threshold-Secret-Sharing.ipynb  echelon_form.ipynb  factoring_support.py  source.py
coding_the_matrix/ch9/: Lab_Marchine-Learning.ipynb
coding_the_matrix_reboot/: README.md  ch_2_field.ipynb
coding_the_matrix_reboot/resources/: image.py  plotting.py
machine_learning/coding_the_matrix/: Lab_Machine_Learning.ipynb  README.md
machine_learning/deep_learning/: Chapter_01.ipynb  Chapter_02_03.ipynb  Chapter_04.ipynb  Chapter_05.ipynb  Chapter_07.ipynb  params.pkl
machine_learning/ml_basic/: README.md  lab-01-basics.ipynb  lab-02-1-linear_regression.ipynb  lab-02-2-linear_regression_feed.ipynb  lab-03-1-minimizing_cost_show_graph.ipynb  lab-03-2-minimizing_cost_gradient_update.ipynb  lab-03-3-minimizing_cost_tf_optimizer.ipynb  (+23 more)
regex/: Chapter_10_조건 달기.ipynb  Chapter_2.ipynb  Chapter_2_문자 하나 찾기.ipynb  Chapter_3.ipynb  Chapter_3_문자 집합으로 찾기.ipynb  Chapter_4_메타 문자 사용하기.ipynb  Chapter_5.ipynb  Chapter_6_위치 찾기.ipynb  Chapter_7.ipynb  Chapter_8_역참조 사용하기.ipynb  Chapter_9_전방탐색과 후방탐색.ipynb  Chapter_부록 B_정규 표현식으로 해결하는 일반적인 문제들.ipynb
(+6 files in other folders)
