[tool.poetry]
name = "jupyter_notebook"
version = "0.0.1"
description = "Jupyter Notebook"
authors = ["Donghyun Seo <donghyun.seo91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2.6"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
